<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">SmartCommuter</string>
    <string name="appDisplayName">Smart Commuter</string>
    <string name="appDesc">SmartCommuter provides free up to the minute information on Public Transport Systems in Ireland.</string>
    <string name="appMoreInfo">For more information about SmartCommuter or to provide feedback please visit our website.</string>
    <string name="appAbout">About SmartCommuter</string>
    <string name="appWebsite">Control your Commuting Experience!!</string>
    <string name="developer">Developed by Shane Bryan Doyle</string>
    <string name="versionLabel">Current Version:</string>
    <string name="version">1</string>
    <string name="searchLbl">Search Stations</string>
    <string name="nearbyLbl">Nearby Stations</string>
    <string name="favouritesLbl">Favourite Stations</string>
    <string name="realtimeLbl">Realtime</string>
    <string name="directionsLbl">Directions</string>
    <string name="locationLbl">Location</string>
    <string name="arrivalsLbl">Arrivals</string>
    <string name="departuresLbl">Departures</string>
    <string name="recentlyViewedLbl">Recently Viewed Stations</string>
    <string name="stationNameLbl">Station Name</string>
    <string name="stationTypeLbl">Station Transport Mode</string>
    <string name="listLbl">List</string>
    <string name="mapLbl">Map</string>
    <string name="settingsLbl">Settings</string>
    <string name="searchStationsNameHint">Enter Station Name</string>
    <string name="searchStationsTypePrompt">Choose the Station Mode</string>
    <string name="informationLbl">Information</string>
    <string name="screenOrientation">portrait</string>
    <string name="gpsAlertTitle">Enable GPS</string>
    <string name="gpsAlertMessageDesc">Your GPS is turned off. You will need to turn it on to use this feature.</string>
    <string name="gpsAlertMessage">Do you want to enable GPS or not use this feature?</string>
    <string name="gpsAlertButtonEnableGPS">Enable GPS</string>
    <string name="gpsAlertButtonDontUse">Don\'t Use</string>
    <string name="createDBProgressTitle">Welcome to SmartCommuter !</string>
    <string name="createDBProgressMessage">Please wait while the database is configured for the first time.</string>
    <string name="updateDBProgressTitle">Database Update !</string>
    <string name="updateDBProgressMessage">Please wait while the database is being updated.</string>
    <string name="viewStationButton">View Station</string>
    <string name="crashMessage">Oh No ! SmartCommuter has crashed, but a report has been sent to fix the issue !</string>
    <string name="routeLbl">Route:</string>
    <string name="restartMessage">You will need to restart SmartCommuter to apply changes !</string>
    <string name="favouriteAddedSuccessMessage">Station added to Favourites</string>
    <string name="favouriteAddedFailedMessage">Station cannot be added to Favourites. Maximum number of Favourite Stations Reached !</string>
    <string name="favouriteRemovedMessage">Station removed from Favourites</string>
    <string name="realTimeLoadingMessage">Loading&#8230;</string>
    <string name="realTimeUnavailableMessage">Realtime information is currently unavailable !</string>
    <string name="recentlyViewedListEmptyMessage">You have no Recently Viewed Stations !</string>
    <string name="favouritesListEmptyMessage">You have no Favourite Stations !</string>
    <string name="searchListEmptyMessage">No Stations Found !</string>
    <string name="nearbyListEmptyMessage">There are no Nearby Stations !</string>
    <string name="arrivalsListEmptyMessage">No Arrivals Expected !</string>
    <string name="departuresListEmptyMessage">No Departures Expected !</string>
    <string name="directionsListEmptyMessage">Unable to provide Directions !</string>
    
    <string name="nextText">Next</string>
    <string name="previousText">Previous</string>
    <string name="finishText">Finish</string>
    <string name="tutorialImageContent">SmartCommuter Tutorial</string>
    
    <!-- Settings Strings -->
    
    <string name="generalSettings">General Settings</string>
    <string name="favouriteStationSettings">Favourite Station Settings</string>
    <string name="recentlyViewedSettings">Recently Viewed Settings</string>
    <string name="about">About</string>
    <string name="showTutorial">Show Tutorial</string>
    <string name="locationIconTitle">Your Location Icon</string>
    <string name="locationIconSummary">Your Location Icon for Maps</string>
    <string name="autoProblemReportTitle">Problem Reporting</string>
    <string name="autoProblemReportSummary">Enable Automatic Problem Reporting</string>
    <string name="maximumFavouriteStationsTitle">Maximum Favourites</string>
    <string name="maximumFavouriteStationsSummary">Maximum number of Favourite Stations</string>
    <string name="maximumRecentlyViewedStationsTitle">Maximum Recently Viewed</string>
    <string name="maximumRecentlyViewedStationsSummary">Maximum number of Recently Viewed Stations</string>
    <string name="clearFavouriteStationsTitle">Clear Favourites</string>
    <string name="clearFavouriteStationsSummary">Clear all Favourite Stations</string>
    <string name="clearFavouriteStationsMessage">Are you sure you want to clear all Favourite Stations</string>
    <string name="clearRecentlyViewedStationsTitle">Clear Recently Viewed</string>
    <string name="clearRecentlyViewedStationsSummary">Clear all Recently Viewed Stations</string>
    <string name="clearRecentlyViewedStationsMessage">Are you sure you want to clear all Recently Viewed Stations?</string>
    <string name="refreshRealTimeTitle">Realtime Update Interval</string>
    <string name="refreshRealTimeSummary">Define how often Realtime Information will be updated</string>
    <string name="directionsModeTitle">Mode of Directions</string>
    <string name="directionsModeSummary">Do you want cycling, driving or walking directions</string>

</resources>