<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/appLayoutTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
		android:padding="10dp" >
        
	    <EditText
	        android:id="@+id/searchStationsNameEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:hint="@string/searchStationsNameHint" 
	        android:inputType="text">

	        <requestFocus />
	    </EditText>
    
	    <Spinner
	        android:id="@+id/stationTypeSpinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:prompt="@string/searchStationsTypePrompt"/>

    </LinearLayout>

    <TextView
        android:id="@+id/searchStationsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchLbl"
        style="@style/banner" />

    <ListView
        android:id="@+id/searchStationsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
    <TextView 
        android:id="@+id/searchStationsListEmpty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:textColor="@color/appFontColor"
        android:text="@string/searchListEmptyMessage" />

</LinearLayout>