<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/appLayoutTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/searchStationsNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stationNameLbl"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	    <EditText
	        android:id="@+id/searchStationsNameEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:hint="@string/searchStationsNameHint" 
	        android:inputType="text">

	        <requestFocus />
	    </EditText>

    </LinearLayout>    
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	    <TextView
	        android:id="@+id/searchStationsTypeView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stationTypeLbl" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	    <Spinner
	        android:id="@+id/stationTypeSpinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:prompt="@string/searchStationsTypePrompt"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/searchStationsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchLbl"
            style="@style/banner" />
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/searchStationsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>